[project]
name = "rfm_receiver"
version = "0.1.0"
description = ""
authors = [{ name = "Tom Camp", email = "tomcamp@protonmail.ch" }]
requires-python = ">=3.10,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "adafruit-circuitpython-rfm9x>=2.2.17,<3",
    "requests>=2.32.3,<3",
    "python-dotenv>=1.0.1,<2",
    "loguru>=0.7.2,<0.8",
    "msgpack>=1.1.0,<2",
]

[dependency-groups]
dev = []

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
